# rockpaper

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
pkg/: package.json  rockpaper.d.ts  rockpaper.js  rockpaper_bg.wasm.d.ts
src/: main.rs
ui/: appwindow.slint  hint.slint
