[package]
name = "rockpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
slint = "1.9.2"

[build-dependencies]
slint-build = "1.9.2"

[profile.release]
opt-level = 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }


[lib]
path = "src/main.rs"
crate-type = ["cdylib"]